--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,18 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Node
 node_modules
+
+# Nuxt
+.nuxt
+.output
 dist
-dist-ssr
+
+# Environment
 *.local
+.env*.local
+.env
 
 # Editor directories and files
 .vscode/*
@@ -22,6 +30,6 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Vercel
 .vercel
-.env*.local
-.env
