--- a/package.json
+++ b/package.json
@@ -1,27 +1,25 @@
 {
-  "name": "latex-order-40-foot",
+  "name": "ausbeds-latex-order",
   "private": true,
-  "version": "0.0.0",
   "type": "module",
+  "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447",
+  "resolutions": {
+    "@vercel/nft": "^1.1.1"
+  },
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.39.1",
-    "@types/react": "^19.2.5",
-    "@types/react-dom": "^19.2.3",
-    "@vitejs/plugin-react": "^5.1.1",
-    "eslint": "^9.39.1",
-    "eslint-plugin-react-hooks": "^7.0.1",
-    "eslint-plugin-react-refresh": "^0.4.24",
-    "globals": "^16.5.0",
-    "vite": "^7.2.4"
+    "@nuxt/icon": "^1.10.0",
+    "@nuxtjs/tailwindcss": "^6.12.0",
+    "@pinia/nuxt": "^0.9.0",
+    "nuxt": "^3.16.0",
+    "nuxt-directus": "^5.7.0",
+    "pinia": "^2.3.0",
+    "vue": "^3.5.0"
   }
 }
